...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.HomeActivity">

    <Button
        android:id="@+id/btnDisplaySignIn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="105dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="8dp"
...
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnDisplayMain"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="105dp"
        android:layout_height="83dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="8dp"
...
