...
            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="serif"
                android:gravity="center_vertical"
                android:labelFor="@+id/emailTextInput"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emailTextInput"
...
                android:text="Password"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:typeface="serif" />

            <EditText
                android:id="@+id/passwordLogIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter your password..."
                android:inputType="textPassword"
                android:textColorHint="@android:color/white"
                android:textColorLink="@android:color/white" />

            <Button
                android:id="@+id/btn_logIn"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="44dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="44dp"
...
                    android:text="Sign with Facebook"
                    android:textAllCaps="false"
                    android:textStyle="italic" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_goSignUp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="displaySignUp"
                android:text="No account yet?Create one"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="italic"
                android:typeface="serif" />

...
